--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -488,6 +488,30 @@
 
 @misc
 {
+	web_openvoronoi,
+	title = {{OpenVoronoi C++ Library (Software)}},
+	author = {Anders E. Wallin},
+	year = {2011-2020},
+	url = "\url{https://github.com/aewallin/openvoronoi}",
+	howpublished = "\url{https://github.com/aewallin/openvoronoi}",
+	note = "[Online; accessed 7-July-2021]",
+}
+
+
+@misc
+{
+	web_qhull,
+	title = {{QHull C and C++ Library (Software)}},
+	author = {C. B. Barber},
+	year = {1995-2020},
+	url = "\url{http://www.qhull.org/}",
+	howpublished = "\url{http://www.qhull.org/}",
+	note = "[Online; accessed 7-July-2021]",
+}
+
+
+@misc
+{
 	web_boost,
 	title = {{Boost C++ Libraries (Software)}},
 	author = {{Various Authors}},
