--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -616,7 +616,7 @@
 @phdthesis
 {
 	PhDWeber,
-	author = "Weber, Tobias",
+	author = "Tobias Weber",
 	title = {{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$}},
 	type = "Dissertation",
 	school = {Technische Universität M\"unchen, Physikdepartment E21},
@@ -631,11 +631,23 @@
 @thesis
 {
 	DiplomaWeber,
-	author = "Weber, Tobias",
+	author = "Tobias Weber",
 	title = {{MIEZE in Theory, Simulation and Experiment}},
 	type = "Diploma Thesis",
 	school = {Technische Universität M\"unchen, Physikdepartment E21},
 	address = {Munich, Germany},
 	year = 2012,
+}
+
+
+@thesis
+{
+	DiplomaSchumann,
+	author = "Wolfgang Schumann",
+	title = {{Das Voronoi-Diagramm von Liniensegmenten und eine Anwendung auf ein Problem mit zusammengesetzten Metriken}},
+	type = "Diploma Thesis",
+	school = {FernUniversit\"at Gesamthochschule in Hagen, Fachbereich Informatik, Lehrgebiet Praktische Informatik VI},
+	address = {Hagen, Germany},
+	year = 2002,
 }
 % -----------------------------------------------------------------------------
