continued with line segments (grouping)

--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -2,6 +2,15 @@
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
 \begin{itemize}
-	\item TODO
-	\item TODO
+	\item {\bf still TODO}
+	\item ...
+	\item Yannick Le Goc and instrument control group
+	\item Dr. Paolo Mutti and computing group
+	\item Dr. Martin B\"ohm and spectroscopy group
+	\item Dr. Paul Steffens
+	\item thesis advisors: Dr. Lihong Ma and Prof. Dr. Christian Icking
+	\item also thank advisors for former (physics) theses
+	\item family
+	\item ...
 \end{itemize}
+
